[package]
name = "storagenv"
version = "0.1.0"
authors = ["edicury <edisoncuryn@gmail.com"]
edition = "2018"
licence = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/edicury/storagenv"
repository = "https://github.com/edicury/storagenv"
keywords = ["cli"]
categories = ["commaand-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
clipboard = "0.5.0"
