[package]
name = "storagenv"
version = "0.1.2"
authors = ["edicury <edisoncuryn@gmail.com"]
edition = "2018"
description = "storagenv is a utility to store and retrieve multiple env's"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/edicury/storagenv"
repository = "https://github.com/edicury/storagenv"
keywords = ["cli"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
clipboard = "0.5.0"
